# hydroflow

./: .gitignore  Cargo.toml  README.md  RELEASING.md  bench.sh  cargo-generate.toml  cleanup-perf.bash  covid_example.rs  covid_example2.rs  doc.bat  dump.txt  filter_map.rs  graph_reachability.dot  graphviz.dot  log.txt  notebook.ipynb  rust-toolchain.toml
.cargo/: config.toml
bench/: data.js  data.json  index.html
benches/: Cargo.toml
benches/benches/: fan_in.rs  fan_out.rs  fork_join.rs  hydroflo2.rs  identity.rs  micro_ops.rs  reachability.rs  scc.rs  scc_edges.txt  scc_labels.txt  vec_deque.rs  words_diamond.rs
book/: 404.html  SUMMARY.md  (+40 more)
hydro_lang/: Cargo.toml
hydro_lang/src/: test_util.rs
hydroflow/: CHANGELOG.md  Cargo.toml
hydroflow/deprecated_examples/covid_tracing/: main.rs
hydroflow/deprecated_examples/covid_tracing_dist/: database.rs  tracker.rs
hydroflow/examples/chat/: client.rs  helpers.rs  protocol.rs  server.rs
hydroflow/examples/covid_tracing/: README.md  main.rs
hydroflow/examples/graph_reachability/: main.rs
hydroflow/examples/kvs/: kvs_compiled.rs  kvs_noop.rs  main.rs
hydroflow/examples/kvs_bench/: server.rs
hydroflow/examples/kvs_bench/protocol/: mod.rs
hydroflow/examples/kvs_lattices/: README.md  helpers.rs  protocol.rs
hydroflow/examples/paxos_2/: acceptor.rs  main.rs
hydroflow/examples/simple/: README.md  main.rs
hydroflow/examples/two_pc/: README.md  coordinator.rs  protocol.rs  subordinate.rs
hydroflow/src/: lib.rs
hydroflow/src/builder/: build_pivot.rs  chain.rs  chain_pull.rs  filter_pull.rs  flat_map.rs  flat_map_pull.rs  flat_map_push.rs  for_each_push.rs  handoff_pull.rs  handoff_push.rs  hydroflow_builder.rs  iterator_factory.rs  join_pull.rs  map.rs  map_pull.rs  map_push.rs  mod.rs  pivot.rs  subgraph_build.rs  tee_push.rs
hydroflow/src/builder/_build_old/: chain.rs  filter.rs  flat_map.rs  for_each_push_build.rs  identity_push_build.rs  join.rs  map.rs  mod.rs  tee.rs
hydroflow/src/builder/connect/: mod.rs
hydroflow/src/builder/surface/: mod.rs  pivot.rs  pull_chain.rs  pull_cross_join.rs  pull_filter.rs  pull_flat_map.rs  pull_map.rs  push_pivot.rs  push_tee.rs
hydroflow/src/compiled/: mod.rs  push_handoff.rs
hydroflow/src/compiled/pull/: cross_join.rs
hydroflow/src/compiled/pull/half_join_state/: mod.rs
hydroflow/src/lang/: collections.rs
hydroflow/src/lang/lattice/: dom_pair.rs  map_union.rs
hydroflow/src/metadata/: mod.rs
hydroflow/src/props/: apply_props.rs  mod.rs
hydroflow/src/scheduled/: context.rs  ctx.rs  graph.rs  graph_ext.rs  graph_graphviz.rs  handoff_list.rs  mod.rs  query.rs  reactor.rs  state.rs  subgraph.rs  type_list.rs
hydroflow/src/scheduled/handoff/: handoff_list.rs  mod.rs  tee.rs  vector.rs
hydroflow/src/scheduled_alt/: ctx.rs  mod.rs
hydroflow/src/scheduled_alt/handoff/: mod.rs  vector.rs
hydroflow/src/util/: demux.rs  demux_enum.rs  mod.rs  slot_map.rs
hydroflow/tests/: graph.rs  groupby.rs  hydroflo2.rs  lattice_join_test.rs  lifetimes_test.rs  surface_async.rs  surface_codegen.rs  surface_demux_enum.rs  surface_demux_partition.rs  surface_demux_switch.rs  surface_echo_gen.rs  surface_lattice_bimorphism.rs  surface_lattice_fold_expanded.rs  surface_loop.rs  surface_multiset_delta.rs  surface_null.rs  surface_ref_edges.rs  surface_ref_edges_debug.rs  surface_ref_edges_debug_exp.rs  surface_ref_edges_exp.rs  surface_scheduling.rs  surface_state_scheduling.rs  surface_stratum.rs  surface_syntax.rs  test.rs  test_macro.rs  test_macro_all.rs  test_macro_filter.rs  test_macro_filter_expanded.rs  test_macro_flatten.rs  test_macro_flatten_expanded.rs  test_macro_map.rs  test_macro_map_expanded.rs  test_macros_2.rs
hydroflow/tests/compile-fail/: README.md  surface.rs  surface_demux_badclosure.rs  surface_demux_badclosure.stderr  surface_demux_port_duplicate.rs  surface_demux_port_duplicate.stderr  surface_demux_port_elided.rs  surface_demux_port_elided.stderr  surface_demux_port_extra.rs  surface_demux_port_extra.stderr  surface_demux_port_extramissing.rs  surface_demux_port_extramissing.stderr  surface_demux_port_missing.rs  surface_demux_port_missing.stderr  surface_demuxenum_notenum.rs  surface_demuxenum_port_duplicate.rs  surface_demuxenum_port_elided.rs  surface_demuxenum_port_elided.stderr  surface_demuxenum_port_extra.rs  surface_demuxenum_port_extra.stderr  surface_demuxenum_port_extramissing.rs  surface_demuxenum_port_missing.rs  surface_demuxenum_port_missing.stderr  surface_demuxenum_wrongenum.rs  surface_demuxenum_wrongitems.rs  surface_loop_nextloop.stderr
hydroflow/tests/snapshots/: surface_codegen__basic_2@graphvis_dot.snap  surface_codegen__basic_2@graphvis_mermaid.snap  surface_codegen__basic_3@graphvis_dot.snap  surface_codegen__basic_3@graphvis_mermaid.snap  surface_codegen__basic_merge@graphvis_dot.snap  surface_codegen__basic_merge@graphvis_mermaid.snap  surface_loop__flo_nested@graphvis_dot.snap  surface_loop__flo_nested@graphvis_mermaid.snap  surface_loop__flo_repeat_kmeans@graphvis_dot.snap  surface_loop__flo_repeat_kmeans@graphvis_mermaid.snap  surface_loop__flo_repeat_n@graphvis_dot.snap  surface_loop__flo_repeat_n@graphvis_mermaid.snap  surface_loop__flo_repeat_n_nested@graphvis_dot.snap  surface_loop__flo_repeat_n_nested@graphvis_mermaid.snap
lattices_derive/: Cargo.toml
lattices_derive/src/: lib.rs
pusherator/: Cargo.toml
pusherator/src/: demux.rs  filter.rs  filter_map.rs  flatten.rs  for_each.rs  inspect.rs  lib.rs  map.rs  partition.rs  switch.rs  tee.rs  unzip.rs
pusherator/src/sink/: mod.rs  pivot.rs
pusherator/src/sinkerator/: filter.rs  filter_map.rs  flat_map.rs  flatten.rs  for_each.rs  map.rs  mod.rs  pivot.rs  sink_compat.rs
variadics_macro/: Cargo.toml
variadics_macro/src/: lib.rs  parse.rs
(+8478 files in other folders)
