[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
scc_graphgen = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.3", features = [ "async_tokio" ] }
graph_mesh = { path = "../graph_mesh" }
hydroflow = { path = "../hydroflow" }
lazy_static = "1.4.0"
once_cell = "1.9.0"
# pprof = { version = "0.6", features = [ "flamegraph", "criterion" ] }
rand = { version = "0.8.4", features = [ "small_rng" ] }
seq-macro = "0.2"
timely = "*"
differential-dataflow = "*"
tokio = { version = "1.0", features = [ "rt-multi-thread" ] }

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "fan_out"
harness = false

[[bench]]
name = "fork_join"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "upcase"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "reachability"
harness = false

[[bench]]
name = "scc"
harness = false
