[package]
name = "hydroflow"
version = "0.1.0"
edition = "2021"

[features]
default = [ "async", "variadic_generics", "alt" ]
async = [ "futures" ]
alt = [ "taskpool" ]
variadic_generics = []

[dependencies]
futures = { version = "0.3", optional = true }
taskpool = { path = "../taskpool", optional = true }
ref-cast = "1.0"
sealed = "0.3"
slotmap = "1.0"
tuple_list = "0.1"

[dev-dependencies]
criterion = { version = "0.3", features = [ "async_tokio" ] }
