[package]
name = "pusherator"
publish = true
version = "0.0.12"
documentation = "https://docs.rs/pusherator/"
description = "Push-based version of Rust iterators"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = [ "demux", "pusherator", "sink", "sinkerator" ]
demux = [ "variadics" ]
pusherator = []
sink = [ "futures", "dep:pin-project-lite" ]
sinkerator = [ "futures", "dep:pin-project-lite" ]
# Dependency-specific features below.
futures = [ "dep:futures" ]
variadics = [ "dep:variadics" ]

[package.metadata.docs.rs]
all-features = true

[dependencies]
either = "1.0.0"
futures = { optional = true, version = "0.3" }
pin-project-lite = { optional = true, version = "0.2" }
variadics = { optional = true, path = "../variadics", version = "^0.0.9" }
