[package]
name = "variadics_macro"
publish = true
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/variadics_macro/"
description = "Macros for the `variadics` crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
proc-macro-crate = "1.1.0"
quote = "1.0.0"
syn = { version = "2.0.0", features = [ "parsing", "extra-traits" ] }

[build-dependencies]
hydroflow_lang = { path = "../hydroflow_lang", version = "^0.5.0" }
itertools = "0.10"
quote = "1.0.0"
